# wfctl

./: .gitignore  LICENSE  README.md  pyproject.toml
specs/configurable-issue-key/: spec.md
specs/install-config-workmux/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_agent_session.py  test_install_config.py  test_install_skills.py  test_io.py  test_json_atomic_no_corruption.py  test_key_pattern.py  test_paths.py  test_promote.py  test_remaining_commands.py  test_specify_runtime.py  test_start_atomic.py  test_storyctl.py  test_tracker.py
wfctl/: _io.py  _paths.py  _pipeline.py  _session.py  _tracker.py  cli.py
